Fixed send-button on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -693,7 +693,7 @@ footer{
 
 }
 
-@media screen and (max-width: 714px) {
+@media screen and (max-width: 715px) {
 
     /*Modifying indent line's width */
     .indent-line {
@@ -730,6 +730,12 @@ footer{
         width: 90%;
     }
 
+    .send-button {
+        padding: 16px 0;
+        width: 50%;
+        box-sizing: border-box;
+    }
+
     /*Mobile footer style*/
 
     .footer-wrapper {
@@ -759,5 +765,13 @@ footer{
 
     .copyright p {
         text-align: center;
+    }
+
+    @media screen and (max-width: 400px){
+
+        .send-button {
+            width: 90%;
+        }
+
     }
 }
